Gradle + POM update